--- a/notebooks/analyze_opencv_angle_definition.ipynb
+++ b/notebooks/analyze_opencv_angle_definition.ipynb
@@ -26,7 +26,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "99b0abf8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-07T05:45:08.198429Z",
+     "start_time": "2023-01-07T05:45:07.579156Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import importlib\n",
@@ -41,12 +46,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "5786b89d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-07T05:45:08.209123Z",
+     "start_time": "2023-01-07T05:45:08.201132Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'4.6.0'"
+       "'4.5.5'"
       ]
      },
      "execution_count": 2,
@@ -60,16 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "8df1a628",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-07T05:50:20.723201Z",
+     "start_time": "2023-01-07T05:50:20.714480Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((135.0, 115.0), (10.0, 50.0), 90.0)\n",
-      "0.0\n"
+      "minAreaRect ((135.0, 115.0), (10.0, 50.0), 90.0) 0.2\n",
+      "0.0\n",
+      "fitEllipse ((139.8851318359375, 114.948486328125), (10.4625825881958, 203.10972595214844), 90.15093231201172) 0.051511972354591866\n",
+      "0.15093231201171875\n",
+      "fitEllipseDirect ((139.8851318359375, 114.948486328125), (10.4625825881958, 203.10972595214844), 90.15093231201172) 0.051511972354591866\n",
+      "0.15093231201171875\n"
      ]
     },
     {
@@ -79,7 +98,7 @@
        "<PIL.Image.Image image mode=RGB size=200x200>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,34 +106,46 @@
    "source": [
     "frame = np.ones((200,200, 3), dtype=np.uint8) + 254\n",
     "\n",
-    "cnts = np.array([[10, 10], [10,20], [60, 20], [60, 10]])+100\n",
+    "cnts = np.array([[10, 10], [10,20], [30,20], [60, 20], [60, 10]])+100\n",
     "\n",
     "cv2.drawContours(frame, [cnts],0,np.array(100) * 2/3,1)\n",
     "\n",
-    "rect = cv2.minAreaRect(cnts)\n",
-    "print(rect)\n",
+    "for fct in [cv2.minAreaRect, cv2.fitEllipse, cv2.fitEllipseDirect]:\n",
     "\n",
-    "angle = rect[2]\n",
-    "if rect[1][1] > rect[1][0]:\n",
-    "    angle = angle -90\n",
+    "    rect = fct(cnts)\n",
+    "    print(fct.__name__, rect, rect[1][0]/rect[1][1])\n",
     "\n",
-    "print(angle)\n",
+    "    angle = rect[2]\n",
+    "    if rect[1][1] > rect[1][0]:\n",
+    "        angle = angle -90\n",
+    "\n",
+    "    print(angle)\n",
+    "#     cv2.ellipse( frame, rect, 100, 2 );\n",
     "\n",
     "Image.fromarray(frame)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "f33d31b2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-07T05:51:11.038279Z",
+     "start_time": "2023-01-07T05:51:11.028290Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((140.0, 109.99999237060547), (11.766969680786133, 58.834842681884766), 78.69007110595703)\n",
-      "-11.309928894042969\n"
+      "minAreaRect ((140.0, 109.99999237060547), (11.766969680786133, 58.834842681884766), 78.69007110595703) 0.2000000194512151\n",
+      "-11.309928894042969\n",
+      "fitEllipse ((140.0, 110.0), (31.996715545654297, 61.85622787475586), 98.71417999267578) 0.5172755702213209\n",
+      "8.714179992675781\n",
+      "fitEllipseDirect ((140.0, 110.0), (31.996715545654297, 61.85622787475586), 98.71417999267578) 0.5172755702213209\n",
+      "8.714179992675781\n"
      ]
     },
     {
@@ -124,7 +155,7 @@
        "<PIL.Image.Image image mode=RGB size=200x200>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,34 +163,46 @@
    "source": [
     "frame = np.ones((200,200, 3), dtype=np.uint8) + 254\n",
     "\n",
-    "cnts = np.array([[10, 10], [20,20], [70, 10], [60, 0]])+100\n",
+    "cnts = np.array([[10, 10], [20,20], [20,20], [70, 10], [60, 0]])+100\n",
     "\n",
     "cv2.drawContours(frame, [cnts],0,np.array(100) * 2/3,1)\n",
     "\n",
-    "rect = cv2.minAreaRect(cnts)\n",
-    "print(rect)\n",
+    "for fct in [cv2.minAreaRect, cv2.fitEllipse, cv2.fitEllipseDirect]:\n",
     "\n",
-    "angle = rect[2]\n",
-    "if rect[1][1] > rect[1][0]:\n",
-    "    angle = angle -90\n",
+    "    rect = fct(cnts)\n",
+    "    print(fct.__name__, rect, rect[1][0]/rect[1][1])\n",
     "\n",
-    "print(angle)\n",
+    "    angle = rect[2]\n",
+    "    if rect[1][1] > rect[1][0]:\n",
+    "        angle = angle -90\n",
+    "\n",
+    "    print(angle)\n",
+    "#     cv2.ellipse( frame, rect, 100, 2 );\n",
     "\n",
     "Image.fromarray(frame)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "dbdfdf82",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-07T05:52:49.406594Z",
+     "start_time": "2023-01-07T05:52:49.397664Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((115.0, 135.0), (50.0, 10.0), 90.0)\n",
-      "90.0\n"
+      "minAreaRect ((115.0, 135.0), (50.0, 10.0), 90.0) 5.0\n",
+      "90.0\n",
+      "fitEllipse ((117.4963150024414, 134.9629364013672), (50.32143783569336, 134.24423217773438), 90.9330062866211) 0.3748499061700442\n",
+      "0.9330062866210938\n",
+      "fitEllipseDirect ((117.4963150024414, 134.9629364013672), (50.32143783569336, 134.24423217773438), 90.9330062866211) 0.3748499061700442\n",
+      "0.9330062866210938\n"
      ]
     },
     {
@@ -169,7 +212,7 @@
        "<PIL.Image.Image image mode=RGB size=200x200>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,34 +220,47 @@
    "source": [
     "frame = np.ones((200,200, 3), dtype=np.uint8) + 254\n",
     "\n",
-    "cnts = np.array([[10, 10], [20,10], [20, 60], [10, 60]])+100\n",
+    "cnts = np.array([[10, 10], [20,10], [20, 60], [20, 60], [10, 60]])+100\n",
     "\n",
     "cv2.drawContours(frame, [cnts],0,np.array(100) * 2/3,1)\n",
     "\n",
-    "rect = cv2.minAreaRect(cnts)\n",
-    "print(rect)\n",
     "\n",
-    "angle = rect[2]\n",
-    "if rect[1][1] > rect[1][0]:\n",
-    "    angle = angle -90\n",
+    "for fct in [cv2.minAreaRect, cv2.fitEllipse, cv2.fitEllipseDirect]:\n",
     "\n",
-    "print(angle)\n",
+    "    rect = fct(cnts)\n",
+    "    print(fct.__name__, rect, rect[1][0]/rect[1][1])\n",
     "\n",
-    "Image.fromarray(frame)\n"
+    "    angle = rect[2]\n",
+    "    if rect[1][1] > rect[1][0]:\n",
+    "        angle = angle -90\n",
+    "\n",
+    "    print(angle)\n",
+    "#     cv2.ellipse( frame, rect, 100, 2 );\n",
+    "\n",
+    "Image.fromarray(frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "637ee654",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-07T05:53:22.833261Z",
+     "start_time": "2023-01-07T05:53:22.824310Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((120.0, 130.0), (58.834842681884766, 11.766969680786133), 78.69007110595703)\n",
-      "78.69007110595703\n"
+      "minAreaRect ((120.0, 130.0), (58.834842681884766, 11.766969680786133), 78.69007110595703) 4.99999951371967\n",
+      "78.69007110595703\n",
+      "fitEllipse ((120.0, 130.0), (14.465971946716309, 87.14558410644531), 169.78668212890625) 0.16599776219351087\n",
+      "79.78668212890625\n",
+      "fitEllipseDirect ((120.0, 130.0), (14.465971946716309, 87.14558410644531), 169.78668212890625) 0.16599776219351087\n",
+      "79.78668212890625\n"
      ]
     },
     {
@@ -214,7 +270,7 @@
        "<PIL.Image.Image image mode=RGB size=200x200>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,20 +278,23 @@
    "source": [
     "frame = np.ones((200,200, 3), dtype=np.uint8) + 254\n",
     "\n",
-    "cnts = np.array([[10, 10], [20,0], [30, 50], [20, 60]])+100\n",
+    "cnts = np.array([[10, 10], [20,0], [20,0], [30, 50], [20, 60]])+100\n",
     "\n",
     "cv2.drawContours(frame, [cnts],0,np.array(100) * 2/3,1)\n",
     "\n",
-    "rect = cv2.minAreaRect(cnts)\n",
-    "print(rect)\n",
+    "for fct in [cv2.minAreaRect, cv2.fitEllipse, cv2.fitEllipseDirect]:\n",
     "\n",
-    "angle = rect[2]\n",
-    "if rect[1][1] > rect[1][0]:\n",
-    "    angle = angle -90\n",
+    "    rect = fct(cnts)\n",
+    "    print(fct.__name__, rect, rect[1][0]/rect[1][1])\n",
     "\n",
-    "print(angle)\n",
+    "    angle = rect[2]\n",
+    "    if rect[1][1] > rect[1][0]:\n",
+    "        angle = angle -90\n",
     "\n",
-    "Image.fromarray(frame)\n"
+    "    print(angle)\n",
+    "#     cv2.ellipse( frame, rect, 100, 2 );\n",
+    "\n",
+    "Image.fromarray(frame)"
    ]
   },
   {
@@ -248,11 +307,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "25c36576",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-07T05:45:27.809093Z",
+     "start_time": "2023-01-07T05:45:27.803312Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((120.0, 130.0), (58.834842681884766, 11.766969680786133), 78.69007110595703)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rect"
+   ]
   },
   {
    "cell_type": "code",
@@ -273,9 +350,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "py310",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "py310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -287,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
